tests/NormalTests/paczka2/big_fuzzy/37083471.err
Error in line 1: qjqYgM A149 23,69
Error in line 10: qjqYgM A149 48,0
Error in line 7: gjofL2QVT A232 40,8
Error in line 17: A149 A232 78,5
Error in line 28: gjofL2QVT A149 193,9
Error in line 31: QhAiaIs A149 87,6
Error in line 26: SQvSPjcWD9 A149 93,2
Error in line 39: SQvSPjcWD9 S303 80,
Error in line 46: z6a25c S944 42,80
Error in line 35: qjqYgM A232 79,1
Error in line 37: SQvSPjcWD9 S303 61,1
Error in line 60: QhAiaIs S944 96,7
Error in line 61: QhAiaIs A149 53,2
Error in line 51: qjqYgM S303 53,2
Error in line 75: qjqYgM A232 21,5
Error in line 81: sydDbZH S944 56,9
Error in line 86: sydDbZH S303 6,3
Error in line 88: sydDbZH A232 0,5
Error in line 93: gjofL2QVT S303 19,8
Error in line 94: A149 A149 56,1
Error in line 106: sydDbZH A149 74,59
Error in line 117: SQvSPjcWD9 S944 18,2
Error in line 123: A149 S303 25S2
Error in line 122: gjofL2QVT A149 16,0
Error in line 121: A149 S303 37,6
Error in line 111: sydDbZH A149 247,9
Error in line 138: z6a25c S303 43,7
Error in line 136: SQvSPjcWD9 A149 87,6
Error in line 147: qjqYgM A232 6,8
Error in line 145: A149 S944 13,6
Error in line 167: A149 A232 205,1
Error in line 176: sydDbZH A149 93,5
Error in line 184: gjofL2QVT A232 456,0
Error in line 186: QhAiaIs S944 51,9
Error in line 201: A149 A232 57,2
Error in line 206: sydDbZH A149 70,5
Error in line 229: QhAiaIs A149 91,9
